test/compile_errors/err_collection_literal_wrong_map_target.w
//! expect-check-fail: map literal requires HashMap or BTreeMap expected type

fn main:
    let values: Option[i32] = ["x": 1]
